# azul

./: .gitignore  .gitmodules  .travis.yml  ARCHITECTURE.md  CLAUDE.md  CROSS_COMPILATION.md  CROSS_COMPILE_COMPAT.md  CSS_ROOT_SCOPE_REFACTOR.md  Cargo.toml  Cross.toml  DAMAGE_REGION_PLAN.md  DAMAGE_RENDERING.md  DEBUGGER_REQUIREMENTS.md  DEBUGGER_REQUIREMENTS_2.md  DEBUG_API.md  Dockerfile  HANDOFF_LINUX_X11.md  LICENSE  LICENSE-LINUX.txt  LICENSE-MAC.txt  LICENSE-WINDOWS.txt  MENUBAR_HANDOFF_PROMPT.md  MENUBAR_INJECTION_PLAN.md  README-IOS.md  README-OLD.md  README.md  REFACTORING_PLAN.md  SCROLL_ARCHITECTURE.md  SUPER_PLAN.md  SUPER_PLAN_2.md  TRUETYPE_HINTING_PLAN.md  addpdfoutput.md  api.json  api.json.backup5  appveyor.yml  azulrepo file structure.txt  bloaty-analysis.md  build.py  cbindgen.toml  codecov.yml  (+25 more)
api/rust/: Cargo.toml  build.rs  lib.rs
azul/: Cargo.toml  README.md  app.rs  app_resources.rs  azul.h  build.rs  c-api.rs  cbindgen.toml  compositor.rs  css.rs  display_list.rs  gen-api.py  lib.rs  logging.rs  macros.rs  public.api.json  test_runner.rs  text_layout.rs  text_shaping.rs  traits.rs  ui_solver.rs  window.rs  window_state.rs  wr_translate.rs  xml.rs
azul-core/: Cargo.toml  app.rs  app_resources.rs  async.rs  callbacks.rs  diff.rs  display_list.rs  dom.rs  gl.rs  id_tree.rs  lib.rs  macros.rs  stack_checked_pointer.rs  style.rs  task.rs  traits.rs  ui_description.rs  ui_solver.rs  ui_state.rs  window.rs  window_state.rs
azul-core/src/: app.rs  app_resources.rs  async.rs  callbacks.rs  css.rs  default.html  diff.rs  display_list.rs  dom.rs  gl.rs  id_tree.rs  lib.rs  macros.rs  pagination.rs  stack_checked_pointer.rs  style.rs  styled_dom.rs  svg.rs  task.rs  traits.rs  ui_description.rs  ui_solver.rs  ui_state.rs  window.rs  window_state.rs  xml.rs
azul-css/: Cargo.toml  css.rs  css_properties.rs  hot_reload.rs
azul-css-parser/: Cargo.toml  css.rs  css_parser.rs  hot_reloader.rs  lib.rs  macros.rs
azul-css-parser/src/: css.rs  css_parser.rs  dom.rs  hot_reloader.rs  lib.rs  macros.rs
azul-css/src/: css.rs  css_parser.rs  css_properties.rs  dom.rs  hot_reload.rs  hot_reloader.rs  lib.rs  macros.rs  print_css.rs
azul-desktop/: Cargo.toml  app.rs  build.rs  window.rs  wr_translate.rs
azul-desktop/src/: app.rs  app_resources.rs  compositor.rs  css.rs  dialogs.rs  display_shader.rs  file.rs  lib.rs  logging.rs  str.rs  window.rs  wr_api.rs  wr_translate.rs
azul-dll/: Cargo.toml  Xargo.toml  build.rs  lib.rs  main.rs
azul-dll/src/: lib.rs  python.rs
azul-layout/: Cargo.toml  LICENSE.txt  algo.rs  anon.rs  block.rs  flex.rs  geometry.rs  lib.rs  number.rs  style.rs  ui_solver.rs
azul-layout/src/: algo.rs  flex.rs  layout_solver.rs  layout_test.rs  lib.rs  number.rs
azul-native-style/: Cargo.toml  lib.rs
azul-native-style/src/: lib.rs
azul-native-style/styles/: native_linux.css  native_macos.css  native_windows.css
azul-text-layout/: Cargo.toml  lib.rs  text_layout.rs  text_shaping.rs
azul-text-layout/src/: lib.rs  script.rs  text_layout.rs  text_shaping.rs  text_shaping_new.rs
azul-web/: Cargo.toml  app.rs  lib.rs
azul-web/src/: app.rs  lib.rs
azul-widgets/: Cargo.toml  button.rs  label.rs  lib.rs  svg.rs  table_view.rs  text_input.rs
azul-widgets/src/: button.rs  check_box.rs  color_input.rs  label.rs  lib.rs  number_input.rs  svg.rs  table_view.rs  text_input.rs
azul/cpp/: azul.h
azul/examples/: async.rs  calculator.rs  debug.rs  dragger.css  list.rs  (+6 more)
azulc/: Cargo.toml  css.rs  font.rs  image.rs  lib.rs  main.rs  xml.rs
core/: Cargo.toml
css/: CSS_FEATURES.md  Cargo.toml  todo.md
dll/: Cargo.toml  Xargo.toml  build-all-platforms.sh  build.rs  fix_imports.sh  lib.rs  python.rs
doc/: .gitignore  API_JSON_DOCUMENTATION.md  AUTODOC.md  AUTOFIX_ARCHITECTURE_V2.md  AUTOFIX_FUNCTION_MANAGEMENT_PLAN.md  AUTOFIX_ISSUES_REPORT.md  AUTOFIX_REFACTORING_PLAN.md  COMPONENT_SYSTEM_REFACTORING.md  COMPONENT_SYSTEM_REPORT.md  COMPONENT_SYSTEM_STATUS.md  COMPONENT_TYPE_SYSTEM_DESIGN.md  Cargo.toml  DEFERRED_CASCADE_DESIGN.md  EVENT_ARCHITECTURE_ANALYSIS.md  MEMTEST_FIXES_REPORT.md  PLAN_COMPONENT_HIERARCHY.md  PLAN_DATA_MODELS_AND_API.md  PLAN_JS_REUSABLE_COMPONENTS.md  PLAN_UI_AND_INTERACTION.md  PLATFORM_WINDOW_REFACTORING.md  README.md  REFTEST.md  SCROLLBAR_BUGS.md  SCROLL_COORDINATE_ARCHITECTURE.md  SUPER_PLAN_0.2.0.md  TYPEINDEX_UNIFICATION.md  XML_COMPONENT_REFACTORING_PLAN.md  autodoc-groups.toml  autodoc-plan.md  compositor.md  test_string_search.py  todo.md  video-hw-decode-apple-windows-handoff.md  wayland-bugs-status.md  webtransport-plan.md
examples/: Cargo.toml  README.md  async.rs  calculator.css  calculator.rs  debug.css  debug.html  debug.rs  dragger.css  dragger.rs  errors.rs  game_of_life.css  game_of_life.rs  harfbuzz.css  harfbuzz.rs  harfbuzz.xml  heap_corruption_test.rs  hot_reload.css  hot_reload.rs  list.rs  opengl.rs  public.rs  scroll_list.css  scroll_list.rs  slider.rs  svg.rs  table.css  table.rs  table_demo.rs  table_view.css  test.css  test.rs  test_content.css  test_input_field.css  test_input_field.rs  text_input.rs  ui.xml  xml.css  xml.rs
layout/: Cargo.toml  README.md
reftest/: .gitignore  Cargo.toml
tests/: 001-basic-sizes.xml  001-simple-rect.test.html  002-absolute-positioning.xml  Cargo.toml  caption_positioning.rs  coretext_autoregression.rs  cpurender_image_probe.rs  css-parser.rs  css.rs  debug_font_parse_compare.py  debug_phantom.py  demo_layout_regressions.rs  empty_cells.rs  flexbox_integration.rs  flexbox_stretch_bugs.rs  float_and_scrollbar.rs  float_integration.rs  focus_manager.rs  font-gc.rs  gpu_synchronize.rs  h1_margin_em_resolution.rs  icu_parity.rs  ifc_caching.rs  image_flex_grow.rs  incremental_rendering.rs  inline_block_text.rs  layout-test.rs  list_marker_counter.rs  loaded_font_introspection.rs  margin_collapse_integration.rs  margin_collapsing.rs  selection.rs  session_regression.rs  svg_render.rs  svg_xml_dom.rs  synthetic_events.rs  table_cell_width_diag.rs  table_layout.rs  table_width_and_alignment.rs  test_glyph_cache_shaping.rs  (+14 more)
workbench/: Cargo.toml
(+17785 files in other folders)
