[workspace]
resolver = "2"
members = [
    "examples/rust", # Rust examples - depends on azul-dll
    "examples/azul-paint", # AzulPaint demo (SUPER_PLAN_2 P2 goal app)
    "examples/azul-widgets", # AzulWidgets demo (showcase of all widgets; W5 release demo)
    "examples/azul-maps", # AzulMaps demo (SUPER_PLAN_2 P3 goal app)
    "examples/azul-vault", # AzulVault demo (SUPER_PLAN_2 P4 goal app)
    "examples/azul-writer", # AzulWriter demo (SUPER_PLAN_2 P5 goal app; bin azul-doc-demo)
    "examples/azul-gamepad", # AzGamepad demo (P6 gamepad goal app)
    "examples/azul-camera", # AzCamera demo (P6 camera widget; crate azul-camera-app)
    "examples/azul-screenshare", # AzScreenShare demo (P6 screencap widget; crate azul-screenshare-app)
    "examples/azul-video", # AzVideo demo (P6 video widget; crate azul-video-app)
    "examples/azul-meet", # azul-meet demo (SUPER_PLAN_2 P8 goal app: Udp + AudioSink + MicrophoneWidget)
    "examples/azul-self-test", # unattended platform-API smoke test (PLATFORM_DEBUG_PLAN Phase 3)
    "dll", # dll module with auto-gen C functions (optional pyO3 support), depends on layout, core and css
    "doc", # doc / test generator, depends on layout, core and css
    "layout", # layout depends on core + css
    "core", # core depends on css
    "css", # CSS parser, does not depend on anything else
]
exclude = [
    ".claude-agents",
    "tests",
    "experiments",
    "third_party",
    # Standalone Wayland GUI-test injector (own [workspace] — keeps
    # wayland-client/scanner out of the azul lockfile). Lives under doc/
    # (the azul-doc tool's home) rather than as its own root folder.
    "doc/aztest",
]

[workspace.dependencies]
glean = "60.5.0"
gleam = "0.15.1"

[patch.crates-io]
# Fork of libudev-sys that dlopen's libudev at runtime (libloading) instead of
# link-binding it at build time, so gilrs (-> gilrs-core -> libudev-sys)
# cross-compiles to hosts without libudev (e.g. `--target x86_64-unknown-linux-gnu`
# from macOS). gilrs itself is unmodified. The git repo's manifest keeps the
# upstream name `libudev-sys` so this [patch] substitutes the transitive dep
# (cargo matches a patch by crate name); the same tree is published to crates.io
# as the `libudev-azul` package (https://crates.io/crates/libudev-azul) for
# discoverability. tag 0.1.4 pins the exact tree.
libudev-sys = { git = "https://github.com/fschutt/libudev-azul", tag = "0.1.4" }
# Vendored + patched gpu-video (Vulkan Video H.264/H.265 decode). Upstream 0.4.0
# rejects any GPU lacking a dedicated async-compute queue (COMPUTE && !GRAPHICS) —
# which NVIDIA Maxwell / GTX 9xx do not expose — even though the bytes-decode path
# never submits to a compute queue (only the optional `transcoder` feature does).
# third_party/gpu-video relaxes that single check (see its src/adapter.rs "azul
# patch"). Relative path so CI / `cargo metadata` resolve it (third_party is
# workspace-excluded). Drop this patch once upstream relaxes the requirement.
gpu-video = { path = "third_party/gpu-video" }
# Single azul-layout in the dll: point printpdf's azul-* at OUR local workspace
# crates, and pull printpdf from its GitHub branch (whose font.rs targets our
# current `ParsedFont` API: get_or_decode_glyph + original_bytes: Option<Arc<FontBytes>>).
# NOTE: must NOT be an absolute local path — that breaks CI / `cargo metadata`
# (azul-doc codegen). Switch back to a crates.io printpdf once a compatible
# version is released. printpdf's own [patch] is ignored here (non-root).
azul-css = { path = "css" }
azul-core = { path = "core" }
azul-layout = { path = "layout" }
# DIAG (2026-06-24, REVERT): vendored rust-fontconfig 4.4.4 with gated find_unicode_fallbacks
# markers (AZ_IN_WASM_SOLVE static) to isolate query_internal vs the coverage loop in the lifted wasm.
rust-fontconfig = { path = "third_party/rust-fontconfig" }
# rev-pinned (azul-0.0.9-html tip 2026-06-11, kuchiki-free html feature) so
# consumers build reproducibly without a printpdf crates.io release.
printpdf = { git = "https://github.com/fschutt/printpdf", rev = "ed4a768e1fa3ff7ce19ba2e7991f07b3b813e0bf" }
# NOTE (2026-06-06): the web-lift font fixes are now PUBLISHED to crates.io (no [patch] needed):
#  - allsorts-azul 0.16.5: BTreeMap GSUB/GPOS caches + hand-rolled indexed table-directory scan
#    (the upstream lazy ReadArray<TableRecord> read mis-lifts on remill → font parse fails).
#  - rust-fontconfig 4.4.3: `to_ascii_lowercase` font-name matching + the `single-thread-unsafe-locks`
#    feature (no-atomic UnsafeCell StLock; std's queue RwLock spins forever in single-threaded
#    lifted wasm). The feature is OFF by default (native = thread-safe RwLock); azul-layout's
#    `web_lift` feature turns it on for the lifted web backend.
# (Deps bumped to those versions in core/Cargo.toml + layout/Cargo.toml.)
# turso (SQLite engine for db-sqlite) pulls io-uring on Linux, which has no
# prebuilt bindings for i686/armv7/s390x. Fork gates io-uring to 64-bit Linux
# (falls back to UnixIO elsewhere); upstream "io-uring optional" later. All six
# workspace crates share one git source. branch=no-io-uring-optional.
turso = { git = "https://github.com/fschutt/turso", branch = "no-io-uring-optional" }
turso_core = { git = "https://github.com/fschutt/turso", branch = "no-io-uring-optional" }
turso_ext = { git = "https://github.com/fschutt/turso", branch = "no-io-uring-optional" }
turso_macros = { git = "https://github.com/fschutt/turso", branch = "no-io-uring-optional" }
turso_parser = { git = "https://github.com/fschutt/turso", branch = "no-io-uring-optional" }
turso_sqlite3_parser = { git = "https://github.com/fschutt/turso", branch = "no-io-uring-optional" }
# tfd (native file dialogs, via azul-layout) used the `windows` crate 0.48 on
# Windows, whose bundled import lib (windows.0.48.5.lib) the i686-rust9x target
# can't resolve. Fork (v0.1.2) drops the `windows` crate and resolves the
# Win95/98-era comdlg32/shell32/user32/ole32 dialog APIs at RUNTIME via
# LoadLibraryW + GetProcAddress (transmuted fn ptrs). The only link-time Win32
# dependency is kernel32, whose import lib is always present — so azul links on
# every Windows target, including legacy i686-rust9x. Drop the patch once 0.1.2
# is on crates.io.
tfd = { git = "https://github.com/fschutt/tfd" }

[profile.release]
opt-level = 3
debug = 1         # Line-level debug info only (smaller than full debug=2).
strip = false     # Don't strip symbols so samply can resolve them.
lto = false       # No LTO for faster local builds.
codegen-units = 16 # Parallel codegen for faster local builds (~60s → ~20s for azul-layout).
panic = "abort"   # Removes stack unwinding code (drastic size reduction).

# [g140 az-web-lift] TRIED + REVERTED: per-package opt-level=1 for azul-layout/core/css to
# de-SROA the native code remill lifts. RESULT = NET REGRESSION: opt-1 produced different
# machine code that hit NEW unlifted jump-tables/instructions (missing_block 0→39), broke font
# parse + text shaping (which opt-3 handled), and the dom_children loop STILL read len=0. The
# careful lift fixes (FMUL, jump-table devirt, etc.) are tuned to opt-3 codegen; changing opt
# disrupts the lift broadly. Conclusion: opt-level tuning is not the fix — the real fix is in
# the transpiler's memory-lowering/opt of the (correct) remill IR. Keep at opt-3 (release default).

# CI / distribution profile: maximum optimization, slow to build.
#   cargo build --profile prod-release -p azul-dll --features build-dll
[profile.prod-release]
inherits = "release"
opt-level = 3
lto = "thin"      # Thin LTO: good size/perf wins without full-LTO build cost.
codegen-units = 1 # Single codegen unit for best optimization.
strip = "symbols" # Strip symbols for smallest binary.
# Distribution profile carries NO debuginfo. `release` sets debug=1 for local
# samply profiling, but that line-table data bloats the `libazul.a` STATICLIB
# to ~1 GB: cargo's `strip` only strips final linked outputs (.so/.dylib/exe),
# NOT `.a` archives, so the archive otherwise keeps debug=1 line tables for the
# whole azul + webrender + deps object set un-GC'd. debug=0 is the real fix; CI
# also runs `strip --strip-debug` on the `.a` as a belt (removes local symbols).
debug = 0

# Minimum-size profile: smallest possible binary without losing functionality.
#   cargo build --profile min-size -p azul-dll --features build-dll
[profile.min-size]
inherits = "release"
opt-level = "z"   # Optimize for size over speed.
lto = "fat"       # Full LTO: maximum cross-crate inlining + dead code elimination.
codegen-units = 1 # Single codegen unit for best optimization.
strip = "symbols" # Strip debug symbols and local symbols.
debug = 0         # No debug info at all.

[profile.coverage]
inherits = "release"
strip = false     # Keep symbols for grcov source mapping.
debug = true      # Full debug info for line-level coverage.
lto = false       # Disable LTO so grcov can see individual object files.
codegen-units = 16
panic = "unwind"  # Tests need unwinding for #[should_panic] etc.

