[workspace]
resolver = "2"
members = [
    "examples/rust", # Rust examples - depends on azul-dll
    "examples/azul-paint", # AzulPaint demo (SUPER_PLAN_2 P2 goal app)
    "examples/azul-widgets", # AzulWidgets demo (showcase of all widgets; W5 release demo)
    "examples/azul-maps", # AzulMaps demo (SUPER_PLAN_2 P3 goal app)
    "examples/azul-vault", # AzulVault demo (SUPER_PLAN_2 P4 goal app)
    "examples/azul-writer", # AzulWriter demo (SUPER_PLAN_2 P5 goal app; bin azul-doc-demo)
    "examples/azul-gamepad", # AzGamepad demo (P6 gamepad goal app)
    "examples/azul-camera", # AzCamera demo (P6 camera widget; crate azul-camera-app)
    "examples/azul-screenshare", # AzScreenShare demo (P6 screencap widget; crate azul-screenshare-app)
    "examples/azul-video", # AzVideo demo (P6 video widget; crate azul-video-app)
    "examples/azul-meet", # azul-meet demo (SUPER_PLAN_2 P8 goal app: Udp + AudioSink + MicrophoneWidget)
    "examples/azul-self-test", # unattended platform-API smoke test (PLATFORM_DEBUG_PLAN Phase 3)
    "dll", # dll module with auto-gen C functions (optional pyO3 support), depends on layout, core and css
    "doc", # doc / test generator, depends on layout, core and css
    "layout", # layout depends on core + css
    "core", # core depends on css
    "css", # CSS parser, does not depend on anything else
]
exclude = [
    ".claude-agents",
    "tests",
    "experiments",
    "third_party",
    # Standalone Wayland GUI-test injector (own [workspace] — keeps
    # wayland-client/scanner out of the azul lockfile). Lives under doc/
    # (the azul-doc tool's home) rather than as its own root folder.
    "doc/aztest",
]

[workspace.dependencies]
glean = "60.5.0"
gleam = "0.15.1"

[patch.crates-io]
# NOTE: the former `libudev-sys` and `gpu-video` git patches are GONE — they are
# now real published crates that dll/ depends on directly by a `package =` rename
# (cargo `[patch]` cannot rename a crate; a git patch also trips the "no [patch]
# on published deps" release gate). See dll/Cargo.toml:
#   * gilrs        -> package "gilrs-azul"     (-> gilrs-core-azul -> libudev-sys-azul),
#     the dlopen-libudev chain so gilrs cross-compiles to hosts without libudev.
#   * gpu-video    -> package "gpu-video-azul", the smelter PR #2109 fork (NVIDIA
#     Maxwell async-compute-queue fallback), published standalone.
# Swap both back to upstream crates.io once smelter#2109 ships in a release.
#
# Single azul-layout across the tree: point printpdf's azul-* deps (azul-css
# 0.0.8 / azul-core 0.0.8 / azul-layout 0.0.9) at OUR local workspace crates so
# there is one ParsedFont. printpdf itself now comes from crates.io (0.10.0, in
# dll/). Must NOT be an absolute path — breaks CI / `cargo metadata`.
azul-css = { path = "css" }
azul-core = { path = "core" }
azul-layout = { path = "layout" }
# printpdf now comes from crates.io (0.11.3 — requires azul-css/core 0.0.10 +
# azul-layout 0.0.11, all published). The azul-* path patches above redirect
# printpdf's azul deps to this one workspace copy, so there is a single
# azul-layout and NO printpdf git patch is needed. (dll/ pins printpdf 0.11.3.)
# rust-fontconfig: use crates.io 4.4.4 (the vendored copy was a labelled REVERT;
# its only functional delta was a web_lift-only hashbrown workaround). Deps
# bumped to 4.4.4 in core/ + layout/.
#
# allsorts-azul is NOT patched. It used to be (`path = "third_party/allsorts"`), and that
# is exactly how azul-layout 0.0.9 shipped broken: the vendored tree grew
# `hint_glyph_with_flags_pp1` while the published allsorts-azul 0.17.0 kept the same
# version number without it, so the crate compiled here and failed for everyone else.
# `cargo publish` strips [patch] — anything that only builds under one is not publishable.
# The fork is released as allsorts-azul 0.17.1 and consumed from the registry like any
# other dependency. Land changes there, publish, then bump.
# turso (SQLite engine for db-sqlite) pulls io-uring on Linux, which has no
# prebuilt bindings for i686/armv7/s390x. Fork gates io-uring to 64-bit Linux
# (falls back to UnixIO elsewhere); upstream "io-uring optional" later. All six
# workspace crates share one git source. branch=no-io-uring-optional.
turso = { git = "https://github.com/fschutt/turso", branch = "no-io-uring-optional" }
turso_core = { git = "https://github.com/fschutt/turso", branch = "no-io-uring-optional" }
turso_ext = { git = "https://github.com/fschutt/turso", branch = "no-io-uring-optional" }
turso_macros = { git = "https://github.com/fschutt/turso", branch = "no-io-uring-optional" }
turso_parser = { git = "https://github.com/fschutt/turso", branch = "no-io-uring-optional" }
turso_sqlite3_parser = { git = "https://github.com/fschutt/turso", branch = "no-io-uring-optional" }
# tfd: use crates.io 0.1.2 (fork published) — the runtime-dlopen Win32 dialog
# resolver that links on every Windows target incl. legacy i686-rust9x. layout/
# declares tfd = "0.1", which resolves to 0.1.2.

[profile.release]
opt-level = 3
debug = 1         # Line-level debug info only (smaller than full debug=2).
strip = false     # Don't strip symbols so samply can resolve them.
lto = false       # No LTO for faster local builds.
codegen-units = 16 # Parallel codegen for faster local builds (~60s → ~20s for azul-layout).
panic = "abort"   # Removes stack unwinding code (drastic size reduction).
                  # DELIBERATE for dist artifacts too (prod-release inherits
                  # this): a Rust panic inside libazul aborts the host process
                  # instead of unwinding across the FFI boundary (which is UB).
                  # CI asserts the shipped artifacts stay abort ("Assert
                  # panic=abort" step in rust.yml). eh_frame still present =
                  # rustc's default force-unwind-tables (crash backtraces),
                  # NOT a panic-strategy leak — see size audit §2.10d.

# [g140 az-web-lift] TRIED + REVERTED: per-package opt-level=1 for azul-layout/core/css to
# de-SROA the native code remill lifts. RESULT = NET REGRESSION: opt-1 produced different
# machine code that hit NEW unlifted jump-tables/instructions (missing_block 0→39), broke font
# parse + text shaping (which opt-3 handled), and the dom_children loop STILL read len=0. The
# careful lift fixes (FMUL, jump-table devirt, etc.) are tuned to opt-3 codegen; changing opt
# disrupts the lift broadly. Conclusion: opt-level tuning is not the fix — the real fix is in
# the transpiler's memory-lowering/opt of the (correct) remill IR. Keep at opt-3 (release default).

# CI / distribution profile: maximum optimization, slow to build.
#   cargo build --profile prod-release -p azul-dll --features build-dll
[profile.prod-release]
inherits = "release"
opt-level = 3
lto = "thin"      # Thin LTO: good size/perf wins without full-LTO build cost.
codegen-units = 1 # Single codegen unit for best optimization.
strip = "symbols" # Strip symbols for smallest binary.
# Distribution profile carries NO debuginfo. `release` sets debug=1 for local
# samply profiling, but that line-table data bloats the `libazul.a` STATICLIB
# to ~1 GB: cargo's `strip` only strips final linked outputs (.so/.dylib/exe),
# NOT `.a` archives, so the archive otherwise keeps debug=1 line tables for the
# whole azul + webrender + deps object set un-GC'd. debug=0 is the real fix; CI
# also runs `strip --strip-debug` on the `.a` as a belt (removes local symbols).
debug = 0

# Minimum-size profile: smallest possible binary without losing functionality.
#   cargo build --profile min-size -p azul-dll --features build-dll
[profile.min-size]
inherits = "release"
opt-level = "z"   # Optimize for size over speed.
lto = "fat"       # Full LTO: maximum cross-crate inlining + dead code elimination.
codegen-units = 1 # Single codegen unit for best optimization.
strip = "symbols" # Strip debug symbols and local symbols.
debug = 0         # No debug info at all.

[profile.coverage]
inherits = "release"
strip = false     # Keep symbols for grcov source mapping.
debug = true      # Full debug info for line-level coverage.
lto = false       # Disable LTO so grcov can see individual object files.
codegen-units = 16
panic = "unwind"  # Tests need unwinding for #[should_panic] etc.

