[package]
name = "azul-core"
version = "0.0.2"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "LGPL-3.0-only WITH LGPL-3.0-linking-exception"
description = '''
    Common datatypes used for the Azul document object model, shared across all azul-* crates
'''
homepage = "https://azul.rs/"
keywords = ["gui", "GUI", "user-interface"]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
edition = "2018"
autoexamples = false

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
azul-css                = { path = "../azul-css",        version = "0.0.1", default-features = false }
libm                    = { version = "0.2.1",   default-features = false                   }
azul-css-parser         = { path = "../azul-css-parser", version = "0.0.1", optional = true }
rayon                   = { version = "1.5.0",   default-features = false,  optional = true }
gleam                   = { version = "0.13.1",  default-features = false,  optional = true }
ahash                   = { version = "0.7.0", default-features = false }
rust-fontconfig         = { version = "0.1.2", default-features = false }

[features]
default = ["opengl"]
# Enables the CSS parser
css_parser = ["azul-css-parser"]
# Enables the OpenGL module (uses gleam)
opengl = ["gleam"]
# Enables multithreading functions (rayon)
multithreading = ["rayon"]
# Enables hashing for timing and threading
std = []