[package]
name = "azul-core"
version = "0.0.2"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MPL-2.0"
description = '''
    Common datatypes used for the Azul document object model, shared across all azul-* crates
'''
homepage = "https://azul.rs/"
keywords = ["gui", "GUI", "user-interface"]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
edition = "2018"
autoexamples = false

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
azul-css                = { path = "../azul-css",        version = "0.0.1", default-features = false }
libm                    = { version = "0.2.2",   default-features = false                   }
azul-css-parser         = { path = "../azul-css-parser", version = "0.0.1", optional = true }
rayon                   = { version = "1.5.3",   default-features = false,  optional = true }
gl-context-loader       = { version ="0.1.8", default-features = false }
highway                 = { version = "0.8.0", default-features = false }
rust-fontconfig         = { version = "0.1.5", default-features = false }

[features]
default = ["std"]
# Enables the CSS parser
css_parser = ["azul-css-parser"]
# Enables multithreading functions (rayon)
multithreading = ["rayon"]
# Enables hashing for timing and threading
std = ["multithreading", "css_parser"]