[package]
name = "azul-css-parser"
version = "0.1.0"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MIT"
description = '''
    CSS-compatible parser for the Azul GUI framework
'''
documentation = "https://docs.rs/azul"
homepage = "https://azul.rs/"
keywords = ["gui", "GUI", "user interface", "svg", "graphics", "css" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
readme = "README.md"
exclude = ["assets/*", "doc/*", "examples/*"]
autoexamples = false

[dependencies]
azul-css                = { path = "../azul-css",   default-features = false }
simplecss               = { version = "0.1.0",      default-features = false }
