[package]
name = "azul-css-parser"
version = "0.0.1"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MIT"
description = '''
    CSS-compatible parser for the Azul GUI framework
'''
homepage = "https://azul.rs/"
keywords = ["gui", "user-interface", "svg", "graphics", "css" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
edition = "2018"

[dependencies]
azul-css                = { version = "0.0.1",      default-features = false }
azul-simplecss          = { version = "0.1.1",      default-features = false }
