[package]
name = "azul-css"
version = "0.0.1"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "LGPL-3.0-only WITH LGPL-3.0-linking-exception"
description = '''
    Common datatypes used for styling applications
    using the Azul desktop GUI framework
'''
homepage = "https://azul.rs/"
keywords = ["gui", "user-interface", "svg", "graphics", "css" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
edition = "2018"
autoexamples = false

[dependencies]
libm = { version = "0.2.1", default-features = false }