[package]
name = "azul-css"
version = "0.0.1"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MPL-2.0"
description = '''
    Common datatypes used for styling applications
    using the Azul desktop GUI framework
'''
homepage = "https://azul.rs/"
keywords = ["gui", "user-interface", "svg", "graphics", "css" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
edition = "2018"
autoexamples = false

[dependencies]
libm = { version = "0.2.2", default-features = false }