[package]
name = "azul-desktop"
version = "0.0.5"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "LGPL-3.0-only WITH LGPL-3.0-linking-exception"
description = "Desktop rendering API for azul"
homepage = "https://azul.rs/"
keywords = ["gui", "user-interface", "svg", "graphics", "css" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
edition = "2018"
build = "build.rs"
autoexamples = false

[dependencies]
# swgl                    = { git = "https://github.com/servo/webrender", rev = "3ac3984dddff5224740abdf738141c34b6211ac5", default-features = false }
gleam                   = { version = "0.13.1", default-features = false }
glutin                  = { version = "0.26.0", default-features = false, features = ["x11", "wayland"] } # NOTE: wayland currently has dependency issues, but works!
tinyfiledialogs         = { version = "3.3.9",  default-features = false }
clipboard2              = { version = "0.1.1",  default-features = false }
raw-window-handle       = { version = "0.3.3", default-features = false }
azulc                   = { path = "../azulc", version = "0.0.3",  default-features = false, features = ["image_loading", "font_loading"] }
azul-css                = { path = "../azul-css", version = "0.0.1",  default-features = false }
azul-core               = { path = "../azul-core", version = "0.0.2",  default-features = false, features = ["opengl"] }
azul-layout             = { path = "../azul-layout", version = "0.0.4",  default-features = false, features = ["text_layout"] }
azul-css-parser         = { path = "../azul-css-parser", version = "0.0.1",  default-features = false, optional = true }
log                     = { version = "0.4.8",  default-features = false, optional = true }
fern                    = { version = "0.5.7",  default-features = false, optional = true }
backtrace               = { version = "0.3.43", default-features = false, optional = true }
rust-fontconfig         = { version = "0.1.3", default-features = false, features = ["std"] }
strfmt                  = { version = "0.1.6", default-features = false }

[target.'cfg(not(target_os = "linux"))'.dependencies]
webrender = { git = "https://github.com/servo/webrender", rev = "3ac3984dddff5224740abdf738141c34b6211ac5", default-features = false, features = ["profiler"] }

[target.'cfg(target_os = "linux")'.dependencies]
webrender = { git = "https://github.com/servo/webrender", rev = "3ac3984dddff5224740abdf738141c34b6211ac5", default-features = false, features = ["freetype-lib", "profiler"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { version = "0.9.0",     default-features = false, features = ["mac_os_10_7_support"] }

[features]
default = ["std", "logging", "css_parser", "image_loading", "font_loading", "text_layout", "svg"]
# Enables libstd (on by default)
# If you do not use libstd, the only thing you can do is to draw to a
# linux framebuffer via software rendering. Note that if you disable this,
# multithreading, image_loading, font_loading, etc. have to be disabled, too!
std = ["azul-core/multithreading", "azul-core/std", "backtrace"]
# Enable this feature to enable crash logging & reporting.
# Azul will insert custom panic handlers to pop up a message and log
# crashes to an "error.log" file, see AppConfig for more details
logging = ["fern", "backtrace", "log"]
# Enable / diable the CSS parser
css_parser = ["azul-core/css_parser", "azul-css-parser"]
# On some applications you might not want to load any images. For these purposes
# the image crate can be disabled, to speed up compile times
image_loading = ["azulc/image_loading"]
# Enables loading of ICO files on the image decoder
ico = ["azulc/ico"]
# Enables loading of TGA files on the image decoder
tga = ["azulc/tga"]
# Enables loading of HDR files on the image decoder
hdr = ["azulc/hdr"]
# Enables parallel JPEG decoding on the image decoder
jpeg_rayon = ["azulc/jpeg_rayon"]
# Enables loading of DXT files on the image decoder
dxt = ["azulc/dxt"]
# Enables loading of WEBP files on the image decoder
webp = ["azulc/webp"]
# Enables loading of PNM files on the image decoder
pnm = ["azulc/pnm"]
# Activates the font-loading module, important to deactivate for example
font_loading = ["azulc/font_loading"]
# Text loading module, disable if you have a custom text layouting function
text_layout = ["azulc/text_layout"]
# Whether to include SVG processing (adds dependencies for lyon, usvg and xmlparser)
svg = ["azulc/svg", "azulc/xml"]