[package]
name = "azul-desktop"
version = "0.0.5"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "LGPL-3.0-only WITH LGPL-3.0-linking-exception"
description = "Desktop rendering API for azul"
homepage = "https://azul.rs/"
keywords = ["gui", "user-interface", "svg", "graphics", "css" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
edition = "2018"
autoexamples = false

[dependencies]
gleam                   = { version = "0.13.1", default-features = false }
glutin                  = { version = "0.26.0", default-features = false, features = ["x11", "wayland"] } # NOTE: wayland currently has dependency issues, but works!
tinyfiledialogs         = { version = "3.3.9",  default-features = false }
clipboard2              = { version = "0.1.1",  default-features = false }
raw-window-handle       = { version = "0.3.3", default-features = false }
azulc                   = { path = "../azulc", version = "0.0.3",  default-features = false, features = ["image_loading", "font_loading"] }
azul-css                = { path = "../azul-css", version = "0.0.1",  default-features = false }
azul-core               = { path = "../azul-core", version = "0.0.2",  default-features = false, features = ["opengl"] }
azul-layout             = { path = "../azul-layout", version = "0.0.4",  default-features = false, features = ["text_layout"] }
azul-text-layout        = { path = "../azul-text-layout", version = "0.0.5", default-features = false }
azul-css-parser         = { path = "../azul-css-parser", version = "0.0.1",  default-features = false, optional = true }
log                     = { version = "0.4.8",  default-features = false, optional = true }
fern                    = { version = "0.5.7",  default-features = false, optional = true }
backtrace               = { version = "0.3.43", default-features = false, optional = true }
rust-fontconfig         = { version = "0.1.5", default-features = false, features = ["std"] }
strfmt                  = { version = "0.1.6", default-features = false }
coarsetime              = { version = "0.1.19", default-features = false }

[target.'cfg(not(target_os = "linux"))'.dependencies]
webrender = { git = "https://github.com/servo/webrender", rev = "19aca39f3d520449f82f8b736b0f70358a1440d5", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
webrender = { git = "https://github.com/servo/webrender", rev = "19aca39f3d520449f82f8b736b0f70358a1440d5", default-features = false, features = ["freetype-lib"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { version = "0.9.0",     default-features = false, features = ["mac_os_10_7_support"] }

[features]
default = [
    "std", "logging", "css_parser",
    "font_loading", "text_layout", "svg", "xml",
    "image_loading", "gif", "jpeg", "png", "tiff", "bmp"
]
std = ["azul-core/multithreading", "azul-core/std", "backtrace"]
logging = ["fern", "backtrace", "log"]
css_parser = ["azul-core/css_parser", "azul-css-parser"]
font_loading = ["azulc/font_loading"]
text_layout = ["azulc/text_layout"]
svg = ["azulc/svg", "xml"]
xml = ["azulc/xml"]
image_loading = ["azulc/image_loading", "std"]
gif = ["image_loading", "azulc/gif"]
jpeg = ["image_loading", "azulc/jpeg"]
png = ["image_loading", "azulc/png"]
tiff = ["image_loading", "azulc/tiff"]
bmp = ["image_loading", "azulc/bmp"]
ico = ["image_loading", "azulc/ico"]
tga = ["image_loading", "azulc/tga"]
hdr = ["image_loading", "azulc/hdr"]
dxt = ["image_loading", "azulc/dxt"]
webp = ["image_loading", "azulc/webp"]
pnm = ["image_loading", "azulc/pnm"]